--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   # Hive adapters generation
   build_runner: ^2.4.15
   hive_generator: ^2.0.1
+  #analyzer: ^7.4.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
